--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_text">PIL Mobile TP6</string>
     <string name="description_text">Hello! click the button below to see what movies are popular now!</string>
     <string name="button_text">Go!</string>
+
+    <string name="card_id">ID: %1$s</string>
+    <string name="card_original_title">Original Title: %1$s</string>
+    <string name="content_description">Content Description</string>
+    <string name="list_title">Popular Movies</string>
 </resources>
