--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="card_poster">https://image.tmdb.org/t/p/original%1$s</string>
     <string name="content_description">Content Description</string>
     <string name="list_title">Popular Movies</string>
+    <string name="empty_state_text">The list is empty. Please connect to internet to load the data.</string>
 </resources>
